@@ -15,13 +15,14 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.springframework', name: 'spring-web', version: '6.1.6'
-    implementation group: 'org.springframework', name: 'spring-aop', version: '6.1.6'
-    implementation group: 'org.springframework', name: 'spring-context', version: '6.1.6'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.3.2'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '3.3.2'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.3.2'
+
+    //implementation group: 'org.springframework', name: 'spring-context', version: '6.1.6'
     implementation group: 'org.apache.dubbo', name: 'dubbo', version: '3.3.0-beta.4'
-    implementation 'org.springframework:spring-test:6.1.6'
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    implementation 'org.junit.platform:junit-platform-engine:1.8.2'
+    // implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    // implementation 'org.junit.platform:junit-platform-engine:1.8.2'
     // api 'org.junit.platform:junit-platform-runner:1.8.2'
     implementation 'org.apache.httpcomponents:httpclient:4.5.6'
     implementation 'org.jsoup:jsoup:1.11.3'
@@ -54,6 +55,8 @@ dependencies {
     implementation group: 'com.google.googlejavaformat', name: 'google-java-format', version: '1.22.0'
     // testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
     // testImplementation 'org.junit.platform:junit-platform-console-standalone:1.8.2'
+    implementation group: 'cn.hutool', name: 'hutool-all', version: '5.8.29'
+
 }
 
 group = 'groupId'
@@ -86,7 +89,9 @@ tasks.withType(JavaCompile).configureEach {
                                 "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                                 "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"]
 }
-
+tasks.withType(JavaExec).configureEach {
+    jvmArgs = ['--enable-preview', '-Xmx512m', '-Dfile.encoding=UTF-8', '-Dsun.stdout.encoding=UTF-8', '-Dsun.stderr.encoding=UTF-8']
+}
 test {
     useJUnitPlatform()
     jvmArgs(['--enable-preview'])
